syntax = "proto3";

package blogchain.blog.v1;

import "gogoproto/gogo.proto";

option go_package = "blogchain/x/blog/types";

// Post defines a blog post structure
message Post {
  uint64 id = 1;
  string creator = 2;
  string title = 3;
  string body = 4;
  int64 created_at = 5;
  repeated string tags = 6;
  uint64 likes = 7;
}

// PageRequest defines pagination parameters
message PageRequest {
  uint64 limit = 1;
  uint64 offset = 2;
}

// PageResponse defines pagination response
message PageResponse {
  uint64 total = 1;
  uint64 limit = 2;
  uint64 offset = 3;
}